<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/DayNightBackgroundStyle">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_textview"
            style="@style/DayNightTopTextViewStyle"
            android:text="@string/setting_sec_act" />

        <Button
            android:id="@+id/back_arrow_settings"
            style="@style/DayNightBackArrowButtonStyle" />
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/black_theme"
        style="@style/DayNightSettingsActButtonStyle"
        android:layout_marginStart="@dimen/asset_button"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="@dimen/icon_pad"
        android:text="@string/switch_to_black"
        android:textSize="16sp">

    </androidx.appcompat.widget.SwitchCompat>


    <Button
        android:id="@+id/share_button"
        style="@style/DayNightSettingsActButtonStyle"
        android:text="@string/share_app"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/write_to_support"
        style="@style/DayNightSettingsActButtonStyle"
        android:text="@string/support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/term_of_use"
        style="@style/DayNightSettingsActButtonStyle"
        android:text="@string/term_of_use"
        app:icon="@drawable/arrow" />
</LinearLayout>