<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ys_display"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_zero"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/asset_button"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/asset_button"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        android:foreground="?attr/selectableItemBackground"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_pad"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_zero"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/asset_button"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/asset_button"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        android:foreground="?attr/selectableItemBackground"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_pad"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_zero"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/asset_button"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/asset_button"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:cornerRadius="@dimen/corner_radius"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_pad"
        app:iconTint="@color/black"

        />
</LinearLayout>

